--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,10 @@
 
         "doctrine/doctrine-fixtures-bundle": "v2.2.0",
 
+        "friendsofsymfony/user-bundle": "1.3.*@dev",
+        "friendsofsymfony/message-bundle": "dev-master",
+        "sonata-project/user-bundle": "2.2.*@dev",
+        
         "presta/presta-cms": "1.0.0",
         "presta/sonata-navigation-bundle": "1.0.*",
         "presta/cms-sitemap-bridge-bundle": "1.0.*",
