--- a/app/config/bundles/presta_cms_core.yml
+++ b/app/config/bundles/presta_cms_core.yml
@@ -19,14 +19,14 @@ presta_cms_core:
                 dev:
                     en:
                         locale: en
-                        host: karis_cms_sandbox
+                        host: cms_sandbox
                     fr:
                         locale: fr
                         host: karis_cms_sandbox.fr
                 prod:
                     en:
                         locale: en
-                        host: karis_cms_sandbox
+                        host: cms_sandbox
                     fr:
                         locale: fr
                         host:  karis_cms_sandbox.fr
