--- a/app/config/bundles/sonata_admin.yml
+++ b/app/config/bundles/sonata_admin.yml
@@ -3,7 +3,7 @@ sonata_admin:
     title_logo: ./bundles/prestasonataadminextended/img/logo_title.jpg
     templates:
         # default global templates
-        layout:  ApplicationSonataAdminBundle::custom_layout.html.twig
+        layout:  ::custom_layout.html.twig
     dashboard:
         blocks:
             -
