--- a/app/config/bundles/sonata_block.yml
+++ b/app/config/bundles/sonata_block.yml
@@ -3,3 +3,5 @@ sonata_block:
     blocks:
         sonata.block.service.text:
         sonata.admin.block.admin_list:
+        sonata.user.block.menu:
+        sonata.user.block.account:
