--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+application_sonata_user:
+    resource: "@ApplicationSonataUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 #app/config/routing.yml
 PrestaSitemapBundle:
     resource: "@PrestaSitemapBundle/Resources/config/routing.yml"
@@ -7,10 +11,6 @@ presta_cms_contact:
     resource: "@PrestaCMSContactBundle/Resources/config/routing.xml"
     prefix:   /
 
-sandbox_service:
-    resource: "@SandboxServiceBundle/Controller/"
-    type:     annotation
-    prefix:   /
 
 #Sonata Project
 admin:
@@ -19,11 +19,11 @@ admin:
 _sonata_admin:
     resource: .
     type: sonata_admin
-    prefix: /admin/{_locale}
+    prefix: /admin
 
 #override sonata routes
 sonata_admin_dashboard:
-    pattern: /admin/{_locale}/
+    pattern: /admin/dashboard
     defaults: { _controller: SonataAdminBundle:Core:dashboard }
 
 PrestaCMSCoreBundle:
@@ -43,6 +43,10 @@ gallery:
 media:
     resource: '@SonataMediaBundle/Resources/config/routing/media.xml'
     prefix: /media
+    
+sonata_user:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+    prefix: /admin
 
 #ajax
 paristime:
