--- a/app/config/bundles/presta_cms_core.yml
+++ b/app/config/bundles/presta_cms_core.yml
@@ -2,7 +2,7 @@ imports:
     - { resource: '@PrestaCMSThemeBasicBundle/Resources/config/theme/creative.yml' }
 
 parameters:
-    presta_cms.page.factory.class: Application\Presta\CMSCoreBundle\Factory\PageFactory
+    #presta_cms.page.factory.class: Application\Presta\CMSCoreBundle\Factory\PageFactory
 
 sonata_admin:
   dashboard:
