--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,7 +40,7 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:
-        - ApplicationPrestaCMSCoreBundle
+        #- ApplicationPrestaCMSCoreBundle
         - PrestaCMSCoreBundle
         - PrestaCMSThemeBasicBundle
         - PrestaCMSContactBundle
@@ -100,7 +100,7 @@ doctrine_phpcr:
         document_managers:
             default:
                 mappings:
-                    ApplicationPrestaCMSCoreBundle: ~
+                    #ApplicationPrestaCMSCoreBundle: ~
                     PrestaCMSCoreBundle: ~
                     CmfRoutingBundle: ~
                     CmfTreeBrowserBundle: ~
