--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,9 +2,9 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     karis_cms_sandbox
+    database_name:     sandbox_cms
     database_user:     root
-    database_password: kadala
+    database_password: azerty
     database_path:     null
     
     mailer_transport:  smtp
