--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+application_sylius_settings:
+    resource: "@ApplicationSyliusSettingsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 application_sonata_user:
     resource: "@ApplicationSonataUserBundle/Resources/config/routing.yml"
     prefix:   /
