--- a/app/config/bundles/sonata_admin.yml
+++ b/app/config/bundles/sonata_admin.yml
@@ -46,8 +46,9 @@ sonata_admin:
                     - presta_cms_contact.admin.contact
                     - presta_cms_contact.admin.message
             sonata.user:
-                label: Manage Users 
-                items: ~~      
+                label: Manage Users
+                items:
+                    - sonata.user.admin.user 
             sonata_manage_email:
                 label: Manage Email
                 items: ~    
