--- a/app/config/bundles/presta_cms_core.yml
+++ b/app/config/bundles/presta_cms_core.yml
@@ -19,14 +19,14 @@ presta_cms_core:
                 dev:
                     en:
                         locale: en
-                        host: dev-prestacms-sandbox.com
+                        host: cms-sandbox
                     fr:
                         locale: fr
                         host: dev-prestacms-sandbox.fr
                 prod:
                     en:
                         locale: en
-                        host: sandbox.prestacms.com
+                        host: cms-sandbox
                     fr:
                         locale: fr
                         host:  sandbox.prestacms.fr
