--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,6 +11,9 @@ imports:
     - { resource: '@PrestaCMSCKEditorBundle/Resources/config/config.yml' }
     - { resource: bundles/presta_sonata_navigation.yml }
     - { resource: bundles/presta_sonata_admin_extended.yml }
+    - { resource: bundles/rj_email.yml }
+    - { resource: bundles/sylius_settings.yml }
+    - { resource: bundles/fos_message.yml }
 
 
 framework:
@@ -91,6 +94,7 @@ doctrine:
                     ApplicationPrestaCMSCoreBundle: ~
                     PrestaCMSContactBundle: ~
                     PrestaCMSFAQBundle: ~
+                    ApplicationFOSMessageBundle: ~
 
 stof_doctrine_extensions:
     default_locale: en
