--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,12 @@
 #app/config/routing.yml
+sylius_settings:
+    resource: @SyliusSettingsBundle/Resources/config/routing.yml
+    prefix: /settings
+
+application_sylius_settings:
+    resource: "@ApplicationSyliusSettingsBundle/Resources/config/routing.yml"
+    prefix:   /
+
 PrestaSitemapBundle:
     resource: "@PrestaSitemapBundle/Resources/config/routing.yml"
     prefix:   /
