fix config rj mail bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,6 +95,7 @@ doctrine:
                     PrestaCMSContactBundle: ~
                     PrestaCMSFAQBundle: ~
                     ApplicationFOSMessageBundle: ~
+                    RjEmailBundle: ~
 
 stof_doctrine_extensions:
     default_locale: en
